2009-09-12  Chong Yidong  <cyd@stupidchicken.com>

	* emulation/pc-select.el (scroll-down-mark, scroll-down-nomark)
	(scroll-up-mark, scroll-up-nomark): Doc fix (Bug#4190).

2009-09-11  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-mi.el (gdb-var-list-children-regexp): Delete.
	(gdb-var-list-children): Use json parsing.

2009-09-11  Daniel Colascione <dan.colascione@gmail.com>

	* progmodes/js.el (js--proper-indentation): Handle the case where
	char-before is null.  Reported by Deniz Dogan.

2009-09-11  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/cl-macs.el (help-add-fundoc-usage): Declare.

2009-09-11  Daiki Ueno  <ueno@unixuser.org>

	* epg.el (epg-cipher-algorithm-alist): Add CAMELLIA.
	(epg-digest-algorithm-alist): Add SHA224.
	(epg-context-set-passphrase-callback)
	(epg-context-set-progress-callback): Add description about
	callback function.

2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* custom.el (custom-delayed-init-variables): New var.
	(custom-initialize-delay): New function.
	* startup.el (command-line): "Re"evaluate all vars in
	custom-delayed-init-variables.  Don't reevaluate abbrev-file-name
	explicitly any more.
	* abbrev.el (abbrev-file-name): Use custom-initialize-delay
	to avoid creating a ~/.emacs.d at build-time (bug#4347).

	* proced.el (proced-mode-map): Prefer "m" for proced-mark (bug#4362).

2009-09-11  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-mi.el (gdb-var-update-regexp): Delete.
	(gdb-var-update-handler): Use json parsing.

2009-09-11  Juanma Barranquero  <lekktu@gmail.com>

	* vc-annotate.el (vc-annotate): Use the main file's coding-system to
	decode annotated text, regardless of language environment.  (Bug#2741)

2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (autoloads): Make rmail.el writable as well.

2009-09-11  Glenn Morris  <rgm@gnu.org>

	* dired-aux.el, dired-x.el: Put autoloads in dired.el rather than
	loaddefs.el.